--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 </head>
 <body>
     <div class="profile">
-        <h1>John Doe</h1>
-        <p><strong>Age:</strong> 30</p>
-        <p><strong>Location:</strong> New York, USA</p>
+        <h1>Nihar Morye</h1>
+        <p><strong>Age:</strong> 20</p>
+        <p><strong>Location:</strong> Kurla, Mumbai</p>
         <p><strong>Occupation:</strong> Software Engineer</p>
-        <p><strong>Skills:</strong> JavaScript, HTML/CSS, Python, SQL</p>
-        <p><strong>Education:</strong> Bachelor's Degree in Computer Science, University of Example</p>
-        <p><strong>Experience:</strong> 8 years in web development and software engineering</p>
+        <p><strong>Skills:</strong> JavaScript, HTML/CSS, Python, SQL, Java, MERN stack, Cloud computing</p>
+        <p><strong>Education:</strong> Bachelor's Degree in Information Technology, Shah and Anchor Kutchhi Engineering College</p>
+        <p><strong>Experience:</strong> 1 years in web development and software engineering</p>
         <h2>About Me</h2>
         <p>I am a passionate software engineer with a focus on front-end development. I love creating responsive and user-friendly interfaces using the latest technologies.</p>
         <h2>Projects</h2>
