--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <li><strong>Project 3:</strong> Data Visualization Dashboard with D3.js</li>
         </ul>
         <h2>Contact</h2>
-        <p>Email: john.doe@example.com<br>
-           LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">John Doe's LinkedIn Profile</a></p>
+        <p>Email: niharmorye11@gmail.com<br>
+           LinkedIn: <a href="https://www.linkedin.com/in/nihar-morye" target="_blank">Nihar Morye's LinkedIn Profile</a></p>
     </div>
 </body>
 </html>
